[CUPS] Fix the browser crash in CUPS settings UI in guest mode.

The reason for the crash is that there is no PrinterPrefManager
keyed service for the guest profile or incognito profile. In order
to fix this, we only allow a regular profile to access the CUPS
printers settings UI.

BUG=667395

Review-Url: https://codereview.chromium.org/2535303003
Cr-Commit-Position: refs/heads/master@{#435342}

Former-commit-id: 194dc32cac75a954d252d0a1b8ea4aa81eccd8ec