chrome/browser/ui/webui/options/browser_options_handler.cc
@@ -706,7 +706,8 @@ void BrowserOptionsHandler::GetLocalizedValues(base::DictionaryValue* values) {
 #if defined(OS_CHROMEOS)
   values->SetBoolean("cupsPrintEnabled",
                      base::CommandLine::ForCurrentProcess()->HasSwitch(
-                         ::switches::kEnableNativeCups));
+                         ::switches::kEnableNativeCups) &&
+                         !profile->IsOffTheRecord());
   values->SetString("cupsPrintLearnMoreURL",
                     chrome::kChromeUIMdCupsSettingsURL);
 #endif  // defined(OS_CHROMEOS)
